desde el generador, y se establecen valores para los tres actores de ese tipo
actualmente existentes: virus, mascarillas y papel.


Cambios presentados el 2021/02/01
---------------------------------
Se detecta cuándo el valor del zoom está muy cerca del máximo y, en tal caso, se
ajusta automáticamente a este, corrigiendo así el problema de usabilidad descrito en
los comentarios de GameScreen#zoom.


Cambios presentados el 2021/02/02
---------------------------------
Se introduce el actor HealthActor, que muestra la salud del personaje en pantalla.
Está programado de forma que, si se alcanza la máxima, el sprite desaparezca al cabo
de unos instantes, hasta volver a bajar, de modo que solo aparezca ocasionalmente
para notificar al jugador de la pérdida e incremento de salud. Para que el actor no
interfiera con los actores del mundo, se empiezan a organizar los actores en dos
grupos: del mundo y de interfaz de usuario.

El sistema de detección y gestión de colisiones se hace ahora también más complejo,
ya que se ha introducido la capacidad de permitir, en función de lo que los actores
decidan individualmente entre ellos como aceptable, que los unos puedan superponerse
a los otros. Las notificaciones de colisión solo se mandan una vez, y no en cada
renderizado. Todo esto nos permite establecer que los powerups como las mascarillas
o los rollos de papel higiénico no interfieran con las trayectorias de los virus,
por ejemplo.

Se hace un primer intento de mostrar por pantalla las estadísticas de juego (rollos
de papel recolectados, tiempo...). Para ello se lleva a cabo una ligera
reorganización estructural de la clase GameScreen, que ahora trabaja con unos
viewport, stage y cámara para el mundo del juego y otros para la interfaz de usuario
que muestra estos datos a tiempo real. No obstante, no he logrado cambiar el color
de fuente a uno más oscuro y es fácil confundir los iconos de la interfaz gráfica
con los propios del mapa.