@@ -217,3 +217,11 @@ viewport, stage y cámara para el mundo del juego y otros para la interfaz de us
 que muestra estos datos a tiempo real. No obstante, no he logrado cambiar el color
 de fuente a uno más oscuro y es fácil confundir los iconos de la interfaz gráfica
 con los propios del mapa.
+
+
+Cambios presentados el 2021/02/03
+---------------------------------
+Se divide estructuralmente la renderización de GameScreen en tres fases (GameStages):
+la cuenta atrás, la partida y el fin. Se implementa una primera versión de la cuenta
+atrás, en la que se muestra todo el mapa y se da tiempo al jugador a prepararse antes
+de empezar la partida.
